# astrochatagent

./: README.md  main.py  pyproject.toml
app/: __init__.py  builder.py  llmclient.py  models.py  nodes.py  state.py  utils.py
app/router/: __init__.py  chat_router.py  kundali_router.py  session_router.py
data/: carrer_guidance.txt  love_guidance.txt  nakshtras.json  planetary_impact.json  spiritual_guidance.txt  zodiac_traits.json
db/: data_ingestion.py  init_chroma_db.py
db/utils/: logger.py
helper/: __init__.py  data_ingestion.py  init_chroma_db.py  run_insert.py
helper/utils/: __init__.py  embeddings.py  file_processors.py  metadata.py
tests/: README.md  __init__.py  conftest.py  endpoints_examples.json
tests/app/: __init__.py  test_builder.py  test_llmclient.py  test_models.py  test_nodes.py  test_router_chat.py  test_router_kundali.py  test_state.py  test_utils.py
tests/helper/: __init__.py  test_data_ingestion.py  test_init_chroma_db.py  test_run_insert.py
tests/helper/utils/: __init__.py  test_embeddings.py  test_file_processors.py  test_logger.py  test_metadata.py
vector_db/: chroma.sqlite3
