[project]
name = "mynakshpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.6",
    "fastapi>=0.124.2",
    "flatlib",
    "geopy>=2.4.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=1.0.4",
    "langgraph-checkpoint>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "timezonefinder>=6.2.0",
    "uvicorn>=0.38.0",
    "vedicastro>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
flatlib = { git = "https://github.com/diliprk/flatlib.git", rev = "sidereal" }
